--- a/public/stylepage.css
+++ b/public/stylepage.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family:'SWLink';
-    src: url('C:/Users/17204/Desktop/Desktop/Coding/BlogPage/page/SWLink.ttf') format('truetype');
+    src: url('SWLink.ttf') format('truetype');
 }
 
 html, body {
