--- a/public/stylepage.css
+++ b/public/stylepage.css
@@ -4,7 +4,8 @@
 }
 
 html, body {
-    background-color: #dddddd;
+    /*background-color: #dddddd;*/
+    background: radial-gradient(circle, rgba(221,221,221,1) 38%, rgba(173,173,173,1) 87%);
     font-family: 'SWLink', sans-serif;
     margin: 0;
     padding: 0;
